Add SGGpoint code

--- a/calc_score.ipynb
+++ b/calc_score.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,34 +36,22 @@
     "    diffs = np.vstack([diffs, diffs[-1]])  # Duplicate last differential as an approximation for the last point\n",
     "    return ratios, losses, diffs\n",
     "\n",
-    "def calculate_lambda(losses):\n",
-    "    \"\"\"Calculate dynamic lambda value based on the range and max differential of losses.\"\"\"\n",
-    "    if losses.size == 0:\n",
-    "        return np.array([1, 1, 1])  # 임시 기본값을 반환\n",
-    "    loss_ranges = np.ptp(losses, axis=0)  # Range of each metric's losses\n",
-    "    diffs = np.diff(losses, axis=0)\n",
-    "    if diffs.size == 0:\n",
-    "        max_diffs = np.array([1, 1, 1])  # 임시 기본값을 반환\n",
-    "    else:\n",
-    "        max_diffs = np.max(np.abs(diffs), axis=0)  # Max differential of each metric's losses\n",
-    "    lambda_values = loss_ranges / max_diffs  # Calculate lambda for each metric\n",
-    "    return lambda_values\n",
-    "\n",
-    "\n",
-    "def calculate_model_score(losses, diffs, weights=(1, 1, 5), scaling_factor=5.0, mu=0.1, pruning_ratio=0):\n",
+    "def calculate_model_score(losses, diffs, weights=(1, 1, 5), mu=5, pruning_ratio=0, detailed=False):\n",
     "    \"\"\"Calculate scores incorporating the absolute values of losses and their differentials, adjusted by lambda.\"\"\"\n",
-    "    lambda_values = calculate_lambda(np.array([losses])) * scaling_factor  # Convert losses to array and apply scaling factor\n",
     "    adjusted_losses = np.abs(losses)\n",
     "    adjusted_diffs = np.abs(diffs)\n",
     "    \n",
-    "    # Calculate score by combining losses, diffs, and the pruning ratio impact\n",
-    "    score = sum(weights[i] * (adjusted_losses[i] - lambda_values[i] * adjusted_diffs[i]) for i in range(3)) + mu * pruning_ratio\n",
+    "    weighted_diff_loss = sum(weights[i] * (adjusted_diffs[i] - adjusted_losses[i]) for i in range(3))\n",
+    "    score = weighted_diff_loss + mu * pruning_ratio\n",
+    "    \n",
+    "    if detailed:\n",
+    "        return score, weighted_diff_loss\n",
     "    return score"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,11 +171,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def display_scores(models_data, weights=(1, 2, 5), scaling_factor=3.0, mu=5):\n",
+    "def display_scores(models_data, weights=(1, 1, 3), mu=0.5):\n",
     "    results = {}\n",
     "    for model_name, data in models_data.items():\n",
     "        baseline = data[\"baseline\"]\n",
@@ -195,10 +183,21 @@
     "        if not pruning_results or len(pruning_results) < 2:\n",
     "            print(f\"Not enough data to calculate scores for {model_name}.\")\n",
     "            continue\n",
+    "        \n",
     "        ratios, losses, diffs = calculate_differential_losses(pruning_results, baseline)\n",
     "        \n",
-    "        scores = [calculate_model_score(losses[idx], diffs[idx], weights, scaling_factor, mu, ratios[idx])\n",
-    "                  for idx in range(len(ratios))]\n",
+    "        # Store detailed score components for each pruning ratio\n",
+    "        detailed_scores = []\n",
+    "        scores = []\n",
+    "        for idx in range(len(ratios)):\n",
+    "            score, components = calculate_model_score(losses[idx], diffs[idx], weights, mu, ratios[idx], detailed=True)\n",
+    "            scores.append(score)\n",
+    "            detailed_scores.append({\n",
+    "                \"ratio\": ratios[idx],\n",
+    "                \"weighted_diff_loss\": components,\n",
+    "                \"weighted_ratio\": mu * ratios[idx],\n",
+    "                \"total_score\": score\n",
+    "            })\n",
     "        \n",
     "        max_score_index = np.argmax(scores)\n",
     "        best_ratio = ratios[max_score_index]\n",
@@ -207,12 +206,14 @@
     "        results[model_name] = {\n",
     "            \"best_ratio\": best_ratio,\n",
     "            \"best_score\": best_score,\n",
-    "            \"all_scores\": scores\n",
+    "            \"all_scores\": scores,\n",
+    "            \"detailed_scores\": detailed_scores\n",
     "        }\n",
     "\n",
     "        print(f\"Scores for {model_name}:\")\n",
-    "        for ratio, score in zip(ratios, scores):\n",
-    "            print(f\"  Pruning Ratio {ratio}, Score: {score:.3f}\")\n",
+    "        for entry in detailed_scores:\n",
+    "            print(f\"  Pruning Ratio {entry['ratio']}, Weighted Diff-Loss: {entry['weighted_diff_loss']}, \"\n",
+    "                  f\"Weighted Ratio: {entry['weighted_ratio']:.3f}, Total Score: {entry['total_score']:.3f}\")\n",
     "        print(f\"Best Pruning Ratio: {best_ratio}, Highest Score: {best_score:.3f}\\n\")\n",
     "\n",
     "    return results"
@@ -220,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -228,76 +229,76 @@
      "output_type": "stream",
      "text": [
       "Scores for SGPN:\n",
-      "  Pruning Ratio 0.05, Score: 0.015\n",
-      "  Pruning Ratio 0.1, Score: 0.055\n",
-      "  Pruning Ratio 0.15, Score: 0.129\n",
-      "  Pruning Ratio 0.2, Score: 0.162\n",
-      "  Pruning Ratio 0.25, Score: 0.231\n",
-      "  Pruning Ratio 0.3, Score: 0.410\n",
-      "  Pruning Ratio 0.35, Score: 0.625\n",
-      "  Pruning Ratio 0.4, Score: 1.199\n",
-      "  Pruning Ratio 0.45, Score: 1.027\n",
-      "  Pruning Ratio 0.5, Score: 1.244\n",
-      "  Pruning Ratio 0.55, Score: 2.101\n",
-      "  Pruning Ratio 0.6, Score: 1.837\n",
-      "  Pruning Ratio 0.65, Score: 1.252\n",
-      "  Pruning Ratio 0.7, Score: 1.432\n",
-      "  Pruning Ratio 0.75, Score: 1.424\n",
-      "Best Pruning Ratio: 0.55, Highest Score: 2.101\n",
+      "  Pruning Ratio 0.05, Weighted Diff-Loss: 0.022136627635894704, Weighted Ratio: 0.025, Total Score: 0.047\n",
+      "  Pruning Ratio 0.1, Weighted Diff-Loss: 0.01953200633501183, Weighted Ratio: 0.050, Total Score: 0.070\n",
+      "  Pruning Ratio 0.15, Weighted Diff-Loss: -0.05667369322714977, Weighted Ratio: 0.075, Total Score: 0.018\n",
+      "  Pruning Ratio 0.2, Weighted Diff-Loss: -0.07351746796082102, Weighted Ratio: 0.100, Total Score: 0.026\n",
+      "  Pruning Ratio 0.25, Weighted Diff-Loss: -0.01951860613461024, Weighted Ratio: 0.125, Total Score: 0.105\n",
+      "  Pruning Ratio 0.3, Weighted Diff-Loss: -0.12586082814365815, Weighted Ratio: 0.150, Total Score: 0.024\n",
+      "  Pruning Ratio 0.35, Weighted Diff-Loss: 0.002155624367787705, Weighted Ratio: 0.175, Total Score: 0.177\n",
+      "  Pruning Ratio 0.4, Weighted Diff-Loss: -0.7667593827025527, Weighted Ratio: 0.200, Total Score: -0.567\n",
+      "  Pruning Ratio 0.45, Weighted Diff-Loss: -0.6449347072334441, Weighted Ratio: 0.225, Total Score: -0.420\n",
+      "  Pruning Ratio 0.5, Weighted Diff-Loss: -0.0757823983896502, Weighted Ratio: 0.250, Total Score: 0.174\n",
+      "  Pruning Ratio 0.55, Weighted Diff-Loss: -1.4753599645951754, Weighted Ratio: 0.275, Total Score: -1.200\n",
+      "  Pruning Ratio 0.6, Weighted Diff-Loss: -0.9472785569054634, Weighted Ratio: 0.300, Total Score: -0.647\n",
+      "  Pruning Ratio 0.65, Weighted Diff-Loss: -0.8196367412531886, Weighted Ratio: 0.325, Total Score: -0.495\n",
+      "  Pruning Ratio 0.7, Weighted Diff-Loss: -1.060408338641098, Weighted Ratio: 0.350, Total Score: -0.710\n",
+      "  Pruning Ratio 0.75, Weighted Diff-Loss: -1.0553507478338355, Weighted Ratio: 0.375, Total Score: -0.680\n",
+      "Best Pruning Ratio: 0.35, Highest Score: 0.177\n",
       "\n",
       "Scores for SGFN:\n",
-      "  Pruning Ratio 0.05, Score: 0.007\n",
-      "  Pruning Ratio 0.1, Score: 0.012\n",
-      "  Pruning Ratio 0.15, Score: 0.017\n",
-      "  Pruning Ratio 0.2, Score: 0.024\n",
-      "  Pruning Ratio 0.25, Score: 0.028\n",
-      "  Pruning Ratio 0.3, Score: 0.035\n",
-      "  Pruning Ratio 0.35, Score: 0.047\n",
-      "  Pruning Ratio 0.4, Score: 0.053\n",
-      "  Pruning Ratio 0.45, Score: 0.063\n",
-      "  Pruning Ratio 0.5, Score: 0.085\n",
-      "  Pruning Ratio 0.55, Score: 0.123\n",
-      "  Pruning Ratio 0.6, Score: 0.156\n",
-      "  Pruning Ratio 0.65, Score: 0.213\n",
-      "  Pruning Ratio 0.7, Score: 0.383\n",
-      "  Pruning Ratio 0.75, Score: 0.589\n",
-      "Best Pruning Ratio: 0.75, Highest Score: 0.589\n",
+      "  Pruning Ratio 0.05, Weighted Diff-Loss: -0.0004968311798370429, Weighted Ratio: 0.025, Total Score: 0.025\n",
+      "  Pruning Ratio 0.1, Weighted Diff-Loss: -0.00029010021870623076, Weighted Ratio: 0.050, Total Score: 0.050\n",
+      "  Pruning Ratio 0.15, Weighted Diff-Loss: 0.00011301844287874973, Weighted Ratio: 0.075, Total Score: 0.075\n",
+      "  Pruning Ratio 0.2, Weighted Diff-Loss: 0.0012434757220778862, Weighted Ratio: 0.100, Total Score: 0.101\n",
+      "  Pruning Ratio 0.25, Weighted Diff-Loss: 0.0034839269360639248, Weighted Ratio: 0.125, Total Score: 0.128\n",
+      "  Pruning Ratio 0.3, Weighted Diff-Loss: 0.0027217664413465292, Weighted Ratio: 0.150, Total Score: 0.153\n",
+      "  Pruning Ratio 0.35, Weighted Diff-Loss: -0.008119039889229582, Weighted Ratio: 0.175, Total Score: 0.167\n",
+      "  Pruning Ratio 0.4, Weighted Diff-Loss: -0.007286113286652241, Weighted Ratio: 0.200, Total Score: 0.193\n",
+      "  Pruning Ratio 0.45, Weighted Diff-Loss: -0.0033012143909116973, Weighted Ratio: 0.225, Total Score: 0.222\n",
+      "  Pruning Ratio 0.5, Weighted Diff-Loss: -0.0005810250806811941, Weighted Ratio: 0.250, Total Score: 0.249\n",
+      "  Pruning Ratio 0.55, Weighted Diff-Loss: -0.03169390092036568, Weighted Ratio: 0.275, Total Score: 0.243\n",
+      "  Pruning Ratio 0.6, Weighted Diff-Loss: -0.026650995764996292, Weighted Ratio: 0.300, Total Score: 0.273\n",
+      "  Pruning Ratio 0.65, Weighted Diff-Loss: 0.015391194698152326, Weighted Ratio: 0.325, Total Score: 0.340\n",
+      "  Pruning Ratio 0.7, Weighted Diff-Loss: -0.0819560559180121, Weighted Ratio: 0.350, Total Score: 0.268\n",
+      "  Pruning Ratio 0.75, Weighted Diff-Loss: -0.2347572293916234, Weighted Ratio: 0.375, Total Score: 0.140\n",
+      "Best Pruning Ratio: 0.65, Highest Score: 0.340\n",
       "\n",
       "Scores for Attn + SGFN:\n",
-      "  Pruning Ratio 0.05, Score: 0.006\n",
-      "  Pruning Ratio 0.1, Score: 0.013\n",
-      "  Pruning Ratio 0.15, Score: 0.024\n",
-      "  Pruning Ratio 0.2, Score: 0.029\n",
-      "  Pruning Ratio 0.25, Score: 0.037\n",
-      "  Pruning Ratio 0.3, Score: 0.078\n",
-      "  Pruning Ratio 0.35, Score: 0.081\n",
-      "  Pruning Ratio 0.4, Score: 0.122\n",
-      "  Pruning Ratio 0.45, Score: 0.170\n",
-      "  Pruning Ratio 0.5, Score: 0.230\n",
-      "  Pruning Ratio 0.55, Score: 0.286\n",
-      "  Pruning Ratio 0.6, Score: 0.474\n",
-      "  Pruning Ratio 0.65, Score: 0.598\n",
-      "  Pruning Ratio 0.7, Score: 0.623\n",
-      "  Pruning Ratio 0.75, Score: 1.109\n",
-      "Best Pruning Ratio: 0.75, Highest Score: 1.109\n",
+      "  Pruning Ratio 0.05, Weighted Diff-Loss: 0.0006766714662454938, Weighted Ratio: 0.025, Total Score: 0.026\n",
+      "  Pruning Ratio 0.1, Weighted Diff-Loss: 0.0046815763727285145, Weighted Ratio: 0.050, Total Score: 0.055\n",
+      "  Pruning Ratio 0.15, Weighted Diff-Loss: -0.0021582407782697287, Weighted Ratio: 0.075, Total Score: 0.073\n",
+      "  Pruning Ratio 0.2, Weighted Diff-Loss: 7.711213839956053e-05, Weighted Ratio: 0.100, Total Score: 0.100\n",
+      "  Pruning Ratio 0.25, Weighted Diff-Loss: 0.02086659159758646, Weighted Ratio: 0.125, Total Score: 0.146\n",
+      "  Pruning Ratio 0.3, Weighted Diff-Loss: -0.031050981200774694, Weighted Ratio: 0.150, Total Score: 0.119\n",
+      "  Pruning Ratio 0.35, Weighted Diff-Loss: -0.005017738296233851, Weighted Ratio: 0.175, Total Score: 0.170\n",
+      "  Pruning Ratio 0.4, Weighted Diff-Loss: -0.029207283434215463, Weighted Ratio: 0.200, Total Score: 0.171\n",
+      "  Pruning Ratio 0.45, Weighted Diff-Loss: -0.0515772071252776, Weighted Ratio: 0.225, Total Score: 0.173\n",
+      "  Pruning Ratio 0.5, Weighted Diff-Loss: -0.09558404394503234, Weighted Ratio: 0.250, Total Score: 0.154\n",
+      "  Pruning Ratio 0.55, Weighted Diff-Loss: -0.02785046609946735, Weighted Ratio: 0.275, Total Score: 0.247\n",
+      "  Pruning Ratio 0.6, Weighted Diff-Loss: -0.2278395082004696, Weighted Ratio: 0.300, Total Score: 0.072\n",
+      "  Pruning Ratio 0.65, Weighted Diff-Loss: -0.39817310267249445, Weighted Ratio: 0.325, Total Score: -0.073\n",
+      "  Pruning Ratio 0.7, Weighted Diff-Loss: -0.0519439194505201, Weighted Ratio: 0.350, Total Score: 0.298\n",
+      "  Pruning Ratio 0.75, Weighted Diff-Loss: -0.435003826264127, Weighted Ratio: 0.375, Total Score: -0.060\n",
+      "Best Pruning Ratio: 0.7, Highest Score: 0.298\n",
       "\n",
       "Scores for VLSAT:\n",
-      "  Pruning Ratio 0.05, Score: 0.008\n",
-      "  Pruning Ratio 0.1, Score: 0.013\n",
-      "  Pruning Ratio 0.15, Score: 0.021\n",
-      "  Pruning Ratio 0.2, Score: 0.026\n",
-      "  Pruning Ratio 0.25, Score: 0.032\n",
-      "  Pruning Ratio 0.3, Score: 0.046\n",
-      "  Pruning Ratio 0.35, Score: 0.048\n",
-      "  Pruning Ratio 0.4, Score: 0.055\n",
-      "  Pruning Ratio 0.45, Score: 0.066\n",
-      "  Pruning Ratio 0.5, Score: 0.090\n",
-      "  Pruning Ratio 0.55, Score: 0.123\n",
-      "  Pruning Ratio 0.6, Score: 0.152\n",
-      "  Pruning Ratio 0.65, Score: 0.216\n",
-      "  Pruning Ratio 0.7, Score: 0.450\n",
-      "  Pruning Ratio 0.75, Score: 0.548\n",
-      "Best Pruning Ratio: 0.75, Highest Score: 0.548\n",
+      "  Pruning Ratio 0.05, Weighted Diff-Loss: -0.00018171178493544258, Weighted Ratio: 0.025, Total Score: 0.025\n",
+      "  Pruning Ratio 0.1, Weighted Diff-Loss: 0.00021013787360211296, Weighted Ratio: 0.050, Total Score: 0.050\n",
+      "  Pruning Ratio 0.15, Weighted Diff-Loss: 0.0027962729962682665, Weighted Ratio: 0.075, Total Score: 0.078\n",
+      "  Pruning Ratio 0.2, Weighted Diff-Loss: 0.0032569262976951284, Weighted Ratio: 0.100, Total Score: 0.103\n",
+      "  Pruning Ratio 0.25, Weighted Diff-Loss: -0.0003107892947478686, Weighted Ratio: 0.125, Total Score: 0.125\n",
+      "  Pruning Ratio 0.3, Weighted Diff-Loss: -0.005842768730742593, Weighted Ratio: 0.150, Total Score: 0.144\n",
+      "  Pruning Ratio 0.35, Weighted Diff-Loss: 0.0003858248187585474, Weighted Ratio: 0.175, Total Score: 0.175\n",
+      "  Pruning Ratio 0.4, Weighted Diff-Loss: -0.0017519487082309727, Weighted Ratio: 0.200, Total Score: 0.198\n",
+      "  Pruning Ratio 0.45, Weighted Diff-Loss: 0.0033265403987801133, Weighted Ratio: 0.225, Total Score: 0.228\n",
+      "  Pruning Ratio 0.5, Weighted Diff-Loss: -0.002151528988803996, Weighted Ratio: 0.250, Total Score: 0.248\n",
+      "  Pruning Ratio 0.55, Weighted Diff-Loss: -0.028498139175007868, Weighted Ratio: 0.275, Total Score: 0.247\n",
+      "  Pruning Ratio 0.6, Weighted Diff-Loss: -0.018913823738200053, Weighted Ratio: 0.300, Total Score: 0.281\n",
+      "  Pruning Ratio 0.65, Weighted Diff-Loss: 0.06356076370710635, Weighted Ratio: 0.325, Total Score: 0.389\n",
+      "  Pruning Ratio 0.7, Weighted Diff-Loss: -0.2233404291807622, Weighted Ratio: 0.350, Total Score: 0.127\n",
+      "  Pruning Ratio 0.75, Weighted Diff-Loss: -0.28974002530365284, Weighted Ratio: 0.375, Total Score: 0.085\n",
+      "Best Pruning Ratio: 0.65, Highest Score: 0.389\n",
       "\n"
      ]
     }
