--- a/size_test/vlsat_size.ipynb
+++ b/size_test/vlsat_size.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
     "import os\n",
     "\n",
     "if __name__ == '__main__':\n",
-    "    current_dir = os.path.dirname(os.path.abspath(\"/home/knuvi/Desktop/song/lightweight_3DSSG/size_test\"))\n",
+    "    current_dir = os.path.dirname(os.path.abspath(\"/home/song/Desktop/song/lightweight_3DSSG/size_test\"))\n",
     "    os.sys.path.append(current_dir)\n",
     "    os.sys.path.append(os.path.join(current_dir, './src'))\n",
     "    #os.sys.path.append('./pytorch_geometric/torch_geometric')\n",
@@ -26,29 +26,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
-     "ename": "UnicodeDecodeError",
-     "evalue": "'utf-8' codec can't decode byte 0x89 in position 0: invalid start byte",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mUnicodeDecodeError\u001b[0m                        Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[2], line 11\u001b[0m\n\u001b[1;32m      7\u001b[0m     \u001b[38;5;66;03m#config.pruning.st_pruning_ratio = 0.5\u001b[39;00m\n\u001b[1;32m      8\u001b[0m     \u001b[38;5;66;03m#config.pruning_method = \"st\"\u001b[39;00m\n\u001b[1;32m     10\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m config\n\u001b[0;32m---> 11\u001b[0m config \u001b[38;5;241m=\u001b[39m \u001b[43mload_config\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     12\u001b[0m os\u001b[38;5;241m.\u001b[39menviron[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCUDA_LAUNCH_BLOCKING\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m0\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m     13\u001b[0m util\u001b[38;5;241m.\u001b[39mset_random_seed(config\u001b[38;5;241m.\u001b[39mSEED)\n",
-      "Cell \u001b[0;32mIn[2], line 3\u001b[0m, in \u001b[0;36mload_config\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mload_config\u001b[39m():\n\u001b[1;32m      2\u001b[0m     \u001b[38;5;66;03m# load config file\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m     config \u001b[38;5;241m=\u001b[39m \u001b[43mConfig\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m/home/knuvi/Desktop/song/lightweight_3DSSG/visualization/pruning_infer/eval_MMG_all.png\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m      4\u001b[0m     \u001b[38;5;66;03m#print(config)\u001b[39;00m\n\u001b[1;32m      5\u001b[0m     config\u001b[38;5;241m.\u001b[39mMODE \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtrain\u001b[39m\u001b[38;5;124m'\u001b[39m\n",
-      "File \u001b[0;32m~/Desktop/song/lightweight_3DSSG/src/utils/config.py:13\u001b[0m, in \u001b[0;36mConfig.__init__\u001b[0;34m(self, config_path)\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(config_path, \u001b[38;5;28mstr\u001b[39m):\n\u001b[1;32m     12\u001b[0m     \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(config_path, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mr\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m f:\n\u001b[0;32m---> 13\u001b[0m         d \u001b[38;5;241m=\u001b[39m Config(\u001b[43mjson\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mload\u001b[49m\u001b[43m(\u001b[49m\u001b[43mf\u001b[49m\u001b[43m)\u001b[49m)\n\u001b[1;32m     14\u001b[0m         \u001b[38;5;28;01mfor\u001b[39;00m k,v \u001b[38;5;129;01min\u001b[39;00m d\u001b[38;5;241m.\u001b[39mitems():\n\u001b[1;32m     15\u001b[0m             \u001b[38;5;28mself\u001b[39m[k]\u001b[38;5;241m=\u001b[39mv\n",
-      "File \u001b[0;32m~/miniconda3/envs/vlsat/lib/python3.8/json/__init__.py:293\u001b[0m, in \u001b[0;36mload\u001b[0;34m(fp, cls, object_hook, parse_float, parse_int, parse_constant, object_pairs_hook, **kw)\u001b[0m\n\u001b[1;32m    274\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mload\u001b[39m(fp, \u001b[38;5;241m*\u001b[39m, \u001b[38;5;28mcls\u001b[39m\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m, object_hook\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m, parse_float\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m,\n\u001b[1;32m    275\u001b[0m         parse_int\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m, parse_constant\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m, object_pairs_hook\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkw):\n\u001b[1;32m    276\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"Deserialize ``fp`` (a ``.read()``-supporting file-like object containing\u001b[39;00m\n\u001b[1;32m    277\u001b[0m \u001b[38;5;124;03m    a JSON document) to a Python object.\u001b[39;00m\n\u001b[1;32m    278\u001b[0m \n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    291\u001b[0m \u001b[38;5;124;03m    kwarg; otherwise ``JSONDecoder`` is used.\u001b[39;00m\n\u001b[1;32m    292\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[0;32m--> 293\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m loads(\u001b[43mfp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mread\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m,\n\u001b[1;32m    294\u001b[0m         \u001b[38;5;28mcls\u001b[39m\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mcls\u001b[39m, object_hook\u001b[38;5;241m=\u001b[39mobject_hook,\n\u001b[1;32m    295\u001b[0m         parse_float\u001b[38;5;241m=\u001b[39mparse_float, parse_int\u001b[38;5;241m=\u001b[39mparse_int,\n\u001b[1;32m    296\u001b[0m         parse_constant\u001b[38;5;241m=\u001b[39mparse_constant, object_pairs_hook\u001b[38;5;241m=\u001b[39mobject_pairs_hook, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkw)\n",
-      "File \u001b[0;32m~/miniconda3/envs/vlsat/lib/python3.8/codecs.py:322\u001b[0m, in \u001b[0;36mBufferedIncrementalDecoder.decode\u001b[0;34m(self, input, final)\u001b[0m\n\u001b[1;32m    319\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mdecode\u001b[39m(\u001b[38;5;28mself\u001b[39m, \u001b[38;5;28minput\u001b[39m, final\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m):\n\u001b[1;32m    320\u001b[0m     \u001b[38;5;66;03m# decode input (taking the buffer into account)\u001b[39;00m\n\u001b[1;32m    321\u001b[0m     data \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mbuffer \u001b[38;5;241m+\u001b[39m \u001b[38;5;28minput\u001b[39m\n\u001b[0;32m--> 322\u001b[0m     (result, consumed) \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_buffer_decode\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdata\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43merrors\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mfinal\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    323\u001b[0m     \u001b[38;5;66;03m# keep undecoded input until the next call\u001b[39;00m\n\u001b[1;32m    324\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mbuffer \u001b[38;5;241m=\u001b[39m data[consumed:]\n",
-      "\u001b[0;31mUnicodeDecodeError\u001b[0m: 'utf-8' codec can't decode byte 0x89 in position 0: invalid start byte"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "model name : Mmgnet\n",
+      "num of data: 3845\n",
+      "num of data: 548\n",
+      "path: x/obj_encoder_best.pth result: False\n",
+      "path: x/rel_encoder_2d_best.pth result: False\n",
+      "path: x/rel_encoder_3d_best.pth result: False\n",
+      "path: x/mmg_best.pth result: False\n",
+      "path: x/triplet_projector_2d_best.pth result: False\n",
+      "path: x/clip_adapter_best.pth result: False\n",
+      "path: x/mlp_3d_best.pth result: False\n",
+      "path: x/rel_predictor_3d_best.pth result: False\n",
+      "path: x/rel_predictor_2d_best.pth result: False\n",
+      "path: x/clip_model_best.pth result: False\n",
+      "path: x/obj_predictor_2d_best.pth result: False\n",
+      "path: x/obj_predictor_3d_best.pth result: False\n",
+      "\tmodel loading failed!\n",
+      "\n",
+      "load pretrain model: x\n"
      ]
     }
    ],
    "source": [
     "def load_config():\n",
     "    # load config file\n",
-    "    config = Config(\"/home/knuvi/Desktop/song/lightweight_3DSSG/config/cfg_files/mmgnet_edge_dim256.json\")\n",
+    "    config = Config(\"/home/song/Desktop/song/lightweight_3DSSG/config/mmgnet.json\")\n",
     "    #print(config)\n",
     "    config.MODE = 'train'\n",
     "    config.exp = 'test'\n",
@@ -68,48 +77,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "ModuleList(\n",
-       "  (0-1): 2 x GraphEdgeAttenNetwork(\n",
+       "  (0): GraphEdgeAttenNetwork(\n",
        "    (index_get): Gen_Index()\n",
        "    (index_aggr): Aggre_Index()\n",
        "    (edgeatten): MultiHeadedEdgeAttention(\n",
        "      (nn_edge): Sequential(\n",
-       "        (0): Linear(in_features=1536, out_features=1024, bias=True)\n",
+       "        (0): Linear(in_features=1280, out_features=768, bias=True)\n",
        "        (1): ReLU()\n",
-       "        (2): Linear(in_features=1024, out_features=512, bias=True)\n",
+       "        (2): Linear(in_features=768, out_features=256, bias=True)\n",
        "      )\n",
        "      (nn): mySequential(\n",
-       "        (0): Conv1d(128, 128, kernel_size=(1,), stride=(1,))\n",
+       "        (0): Conv1d(96, 96, kernel_size=(1,), stride=(1,))\n",
        "        (1): ReLU()\n",
        "        (2): Dropout(p=0.5, inplace=False)\n",
-       "        (3): Conv1d(128, 16, kernel_size=(1,), stride=(1,))\n",
+       "        (3): Conv1d(96, 64, kernel_size=(1,), stride=(1,))\n",
        "      )\n",
        "      (proj_edge): Sequential(\n",
-       "        (0): Linear(in_features=512, out_features=512, bias=True)\n",
+       "        (0): Linear(in_features=256, out_features=256, bias=True)\n",
        "      )\n",
        "      (proj_query): Sequential(\n",
        "        (0): Linear(in_features=512, out_features=512, bias=True)\n",
        "      )\n",
        "      (proj_value): Sequential(\n",
-       "        (0): Linear(in_features=512, out_features=128, bias=True)\n",
+       "        (0): Linear(in_features=512, out_features=512, bias=True)\n",
        "      )\n",
        "    )\n",
        "    (prop): Sequential(\n",
-       "      (0): Linear(in_features=640, out_features=640, bias=True)\n",
+       "      (0): Linear(in_features=1024, out_features=1024, bias=True)\n",
        "      (1): ReLU()\n",
-       "      (2): Linear(in_features=640, out_features=512, bias=True)\n",
+       "      (2): Linear(in_features=1024, out_features=512, bias=True)\n",
        "    )\n",
        "  )\n",
        ")"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -120,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -144,18 +153,18 @@
      "text": [
       "각 서브모듈의 파라미터 수:\n",
       "obj_encoder: 107,648\n",
-      "rel_encoder_2d: 75,136\n",
-      "rel_encoder_3d: 75,136\n",
-      "mmg: 20,098,184\n",
-      "triplet_projector_2d: 2,098,688\n",
+      "rel_encoder_2d: 42,112\n",
+      "rel_encoder_3d: 42,112\n",
+      "mmg: 9,091,976\n",
+      "triplet_projector_2d: 1,836,544\n",
       "clip_adapter: 0\n",
       "mlp_3d: 388,584\n",
-      "rel_predictor_3d: 400,666\n",
-      "rel_predictor_2d: 400,666\n",
+      "rel_predictor_3d: 269,594\n",
+      "rel_predictor_2d: 269,594\n",
       "clip_model: 0\n",
       "obj_predictor_2d: 82,080\n",
       "obj_predictor_3d: 82,080\n",
-      "총 파라미터 수: 23,808,869\n"
+      "총 파라미터 수: 12,212,325\n"
      ]
     }
    ],
