--- a/size_test/SGFN_size.ipynb
+++ b/size_test/SGFN_size.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,16 +30,20 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: '/home/oi/Desktop/song/lightweight_3DSSG/config/SGFN.json'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[2], line 11\u001b[0m\n\u001b[1;32m      7\u001b[0m     \u001b[38;5;66;03m#config.pruning.st_pruning_ratio = 0.5\u001b[39;00m\n\u001b[1;32m      8\u001b[0m     \u001b[38;5;66;03m#config.pruning_method = \"st\"\u001b[39;00m\n\u001b[1;32m     10\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m config\n\u001b[0;32m---> 11\u001b[0m config \u001b[38;5;241m=\u001b[39m \u001b[43mload_config\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     12\u001b[0m os\u001b[38;5;241m.\u001b[39menviron[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCUDA_LAUNCH_BLOCKING\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m0\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m     13\u001b[0m util\u001b[38;5;241m.\u001b[39mset_random_seed(config\u001b[38;5;241m.\u001b[39mSEED)\n",
-      "Cell \u001b[0;32mIn[2], line 3\u001b[0m, in \u001b[0;36mload_config\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mload_config\u001b[39m():\n\u001b[1;32m      2\u001b[0m     \u001b[38;5;66;03m# load config file\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m     config \u001b[38;5;241m=\u001b[39m \u001b[43mConfig\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m/home/oi/Desktop/song/lightweight_3DSSG/config/SGFN.json\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m      4\u001b[0m     \u001b[38;5;66;03m#print(config)\u001b[39;00m\n\u001b[1;32m      5\u001b[0m     config\u001b[38;5;241m.\u001b[39mMODE \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtrain\u001b[39m\u001b[38;5;124m'\u001b[39m\n",
-      "File \u001b[0;32m~/Desktop/song/lightweight_3DSSG/src/utils/config.py:12\u001b[0m, in \u001b[0;36mConfig.__init__\u001b[0;34m(self, config_path)\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[38;5;28msuper\u001b[39m()\u001b[38;5;241m.\u001b[39m\u001b[38;5;21m__init__\u001b[39m()\n\u001b[1;32m     11\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(config_path, \u001b[38;5;28mstr\u001b[39m):\n\u001b[0;32m---> 12\u001b[0m     \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mconfig_path\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mr\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mas\u001b[39;00m f:\n\u001b[1;32m     13\u001b[0m         d \u001b[38;5;241m=\u001b[39m Config(json\u001b[38;5;241m.\u001b[39mload(f))\n\u001b[1;32m     14\u001b[0m         \u001b[38;5;28;01mfor\u001b[39;00m k,v \u001b[38;5;129;01min\u001b[39;00m d\u001b[38;5;241m.\u001b[39mitems():\n",
-      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '/home/oi/Desktop/song/lightweight_3DSSG/config/SGFN.json'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "model name : sgfn\n",
+      "num of data: 3845\n",
+      "num of data: 548\n",
+      "path: x/obj_encoder_best.pth result: False\n",
+      "path: x/rel_encoder_best.pth result: False\n",
+      "path: x/gcn_best.pth result: False\n",
+      "path: x/obj_predictor_best.pth result: False\n",
+      "path: x/rel_predictor_best.pth result: False\n",
+      "\tmodel loading failed!\n",
+      "\n",
+      "load pretrain model: x\n"
      ]
     }
    ],
@@ -66,59 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "ModuleList(\n",
-       "  (0-1): 2 x GraphEdgeAttenNetwork(\n",
-       "    (index_get): Gen_Index()\n",
-       "    (index_aggr): Aggre_Index()\n",
-       "    (edgeatten): MultiHeadedEdgeAttention(\n",
-       "      (nn_edge): Sequential(\n",
-       "        (0): Linear(in_features=1536, out_features=1024, bias=True)\n",
-       "        (1): ReLU()\n",
-       "        (2): Linear(in_features=1024, out_features=512, bias=True)\n",
-       "      )\n",
-       "      (nn): mySequential(\n",
-       "        (0): Conv1d(128, 128, kernel_size=(1,), stride=(1,))\n",
-       "        (1): ReLU()\n",
-       "        (2): Dropout(p=0.5, inplace=False)\n",
-       "        (3): Conv1d(128, 16, kernel_size=(1,), stride=(1,))\n",
-       "      )\n",
-       "      (proj_edge): Sequential(\n",
-       "        (0): Linear(in_features=512, out_features=512, bias=True)\n",
-       "      )\n",
-       "      (proj_query): Sequential(\n",
-       "        (0): Linear(in_features=512, out_features=512, bias=True)\n",
-       "      )\n",
-       "      (proj_value): Sequential(\n",
-       "        (0): Linear(in_features=512, out_features=128, bias=True)\n",
-       "      )\n",
-       "    )\n",
-       "    (prop): Sequential(\n",
-       "      (0): Linear(in_features=640, out_features=640, bias=True)\n",
-       "      (1): ReLU()\n",
-       "      (2): Linear(in_features=640, out_features=512, bias=True)\n",
-       "    )\n",
-       "  )\n",
-       ")"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "model.model.mmg.gcn_3ds"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -141,19 +93,12 @@
      "output_type": "stream",
      "text": [
       "각 서브모듈의 파라미터 수:\n",
-      "obj_encoder: 107,648\n",
-      "rel_encoder_2d: 75,136\n",
-      "rel_encoder_3d: 75,136\n",
-      "mmg: 20,098,184\n",
-      "triplet_projector_2d: 2,098,688\n",
-      "clip_adapter: 0\n",
-      "mlp_3d: 388,584\n",
-      "rel_predictor_3d: 400,666\n",
-      "rel_predictor_2d: 400,666\n",
-      "clip_model: 0\n",
-      "obj_predictor_2d: 82,080\n",
-      "obj_predictor_3d: 82,080\n",
-      "총 파라미터 수: 23,808,869\n"
+      "obj_encoder: 40,760\n",
+      "rel_encoder: 25,600\n",
+      "gcn: 1,682,848\n",
+      "obj_predictor: 304,032\n",
+      "rel_predictor: 204,058\n",
+      "총 파라미터 수: 2,257,298\n"
      ]
     }
    ],
@@ -170,19 +115,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'model' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[3], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mmodel\u001b[49m\u001b[38;5;241m.\u001b[39mmodel\u001b[38;5;241m.\u001b[39mgcn\u001b[38;5;241m.\u001b[39mgconvs[\u001b[38;5;241m0\u001b[39m]\u001b[38;5;241m.\u001b[39medgeatten\u001b[38;5;241m.\u001b[39mnn[\u001b[38;5;241m3\u001b[39m]\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'model' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "Conv1d(64, 32, kernel_size=(1,), stride=(1,))"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
